--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,40 @@
-node_modules
+# === Node + Workspace ===
+node_modules/
 pnpm-lock.yaml
+.pnpm-debug.log*
+
+# === Build Artifacts ===
+dist/
+build/
+.vite/
+
+# === TypeScript ===
+*.tsbuildinfo
+
+# === Turborepo Cache ===
+.turbo/
+turbo/
+
+# === Vite Dev Cache ===
+.cache/
+.vite/
+
+# === IDEs and OS ===
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
+
+# === Log files ===
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# === Testing ===
+coverage/
+*.test-results/
+
+# === Local environment ===
+.env
+.env.*
