--- a/apps/reactgrad-csr/package.json
+++ b/apps/reactgrad-csr/package.json
@@ -10,16 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reactgrad/renderer": "workspace:*",
+    "@reactgrad/schema": "workspace:*",
+    "@reactgrad/ui": "workspace:*",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@reactgrad/ui": "workspace:*",
-    "@reactgrad/renderer": "workspace:*",
-    "@reactgrad/schema": "workspace:*"
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
