--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@reactgrad/schema",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.tsx",
+  "description": "Easily configure your ReactGrad app with a JSON schema",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "private": true,
+  "type": "module",
   "scripts": {
+    "build": "tsc && cp src/app-schema.json dist/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
