--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,8 +8,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "bootstrap": "^5.3.7",
     "react": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
