--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -9,5 +9,5 @@
     "strict": true,
     "types": ["vitest", "vite/client"]
   },
-  "include": ["src", "**/*.ts", "**/*.tsx"]
+  "include": ["src", "**/*.ts", "**/*.tsx", "../types/src/types"]
 }
