--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-router-dom": "^7.6.2",
-    "@reactgrad/ui": "workspace:*"
+    "@reactgrad/ui": "workspace:*",
+    "@reactgrad/types": "workspace:*"
   },
   "keywords": [],
   "author": "",
