--- a/apps/reactgrad-csr/package.json
+++ b/apps/reactgrad-csr/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:editor": "vite --mode editor",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -18,6 +19,7 @@
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
+    "@reactgrad/editor": "workspace:*",
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
