--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,6 +14,7 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@reactgrad/schema": "workspace:*",
     "@reactgrad/types": "workspace:*",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
