--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -7,10 +7,10 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "@monaco-editor/react": "^4.7.0"
   },
   "devDependencies": {
-    "@monaco-editor/react": "^4.7.0",
     "@reactgrad/renderer": "workspace:*",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.2",
